[gd_scene load_steps=4 format=3 uid="uid://cei5a1lh6hcwk"]

[ext_resource type="Script" uid="uid://l2auutpkmmrf" path="res://scripts/ui/battle_ui_controller.gd" id="1_controller"]
[ext_resource type="Texture2D" uid="uid://bdsawge7630rf" path="res://assets/ui/bars/hp_bar_small.png" id="2_hp_bar"]
[ext_resource type="Texture2D" uid="uid://ddby3skimq2ql" path="res://assets/ui/bars/mp_bar_small.png" id="3_mp_bar"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_controller")

[node name="TopBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TurnOrderLabel" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "TURN ORDER⚔️"

[node name="TurnOrderDisplay" type="HBoxContainer" parent="TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="BattleInfoLabel" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Round 1"

[node name="PartyPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -100.0
offset_right = 450.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PartyPanel"]
layout_mode = 2

[node name="PartyStatusContainer" type="HBoxContainer" parent="PartyPanel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="CharacterSlot1" type="PanelContainer" parent="PartyPanel/VBoxContainer/PartyStatusContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot1"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot1/VBox"]
layout_mode = 2
text = "Character 1"
horizontal_alignment = 1

[node name="HPBar" type="TextureProgressBar" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot1/VBox"]
custom_minimum_size = Vector2(140, 20)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0
texture_progress = ExtResource("2_hp_bar")
tint_progress = Color(0.2, 0.8, 0.2, 1)

[node name="MPBar" type="TextureProgressBar" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot1/VBox"]
custom_minimum_size = Vector2(120, 16)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0
texture_progress = ExtResource("3_mp_bar")
tint_progress = Color(0.2, 0.4, 0.9, 1)

[node name="CharacterSlot2" type="PanelContainer" parent="PartyPanel/VBoxContainer/PartyStatusContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot2"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot2/VBox"]
layout_mode = 2
text = "Character 2"
horizontal_alignment = 1

[node name="HPBar" type="TextureProgressBar" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot2/VBox"]
custom_minimum_size = Vector2(140, 20)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0
texture_progress = ExtResource("2_hp_bar")
tint_progress = Color(0.2, 0.8, 0.2, 1)

[node name="MPBar" type="TextureProgressBar" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot2/VBox"]
custom_minimum_size = Vector2(120, 16)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0
texture_progress = ExtResource("3_mp_bar")
tint_progress = Color(0.2, 0.4, 0.9, 1)

[node name="CharacterSlot3" type="PanelContainer" parent="PartyPanel/VBoxContainer/PartyStatusContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot3"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot3/VBox"]
layout_mode = 2
text = "Character 3"
horizontal_alignment = 1

[node name="HPBar" type="TextureProgressBar" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot3/VBox"]
custom_minimum_size = Vector2(140, 20)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0
texture_progress = ExtResource("2_hp_bar")
tint_progress = Color(0.2, 0.8, 0.2, 1)

[node name="MPBar" type="TextureProgressBar" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot3/VBox"]
custom_minimum_size = Vector2(120, 16)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0
texture_progress = ExtResource("3_mp_bar")
tint_progress = Color(0.2, 0.4, 0.9, 1)

[node name="CharacterSlot4" type="PanelContainer" parent="PartyPanel/VBoxContainer/PartyStatusContainer"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot4"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot4/VBox"]
layout_mode = 2
text = "Character 4"
horizontal_alignment = 1

[node name="HPBar" type="TextureProgressBar" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot4/VBox"]
custom_minimum_size = Vector2(140, 20)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0
texture_progress = ExtResource("2_hp_bar")
tint_progress = Color(0.2, 0.8, 0.2, 1)

[node name="MPBar" type="TextureProgressBar" parent="PartyPanel/VBoxContainer/PartyStatusContainer/CharacterSlot4/VBox"]
custom_minimum_size = Vector2(120, 16)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0
texture_progress = ExtResource("3_mp_bar")
tint_progress = Color(0.2, 0.4, 0.9, 1)

[node name="ActionMenu" type="HBoxContainer" parent="PartyPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="AttackButton" type="Button" parent="PartyPanel/VBoxContainer/ActionMenu"]
custom_minimum_size = Vector2(130, 60)
layout_mode = 2
text = "Attack"

[node name="SkillButton" type="Button" parent="PartyPanel/VBoxContainer/ActionMenu"]
custom_minimum_size = Vector2(130, 60)
layout_mode = 2
text = "Skills"

[node name="PurifyButton" type="Button" parent="PartyPanel/VBoxContainer/ActionMenu"]
custom_minimum_size = Vector2(130, 60)
layout_mode = 2
text = "Purify"

[node name="ItemButton" type="Button" parent="PartyPanel/VBoxContainer/ActionMenu"]
custom_minimum_size = Vector2(130, 60)
layout_mode = 2
text = "Item"

[node name="DefendButton" type="Button" parent="PartyPanel/VBoxContainer/ActionMenu"]
custom_minimum_size = Vector2(130, 60)
layout_mode = 2
text = "Defend"

[node name="FleeButton" type="Button" parent="PartyPanel/VBoxContainer/ActionMenu"]
custom_minimum_size = Vector2(130, 60)
layout_mode = 2
text = "Flee"

[node name="CombatLog" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -248.0
offset_right = -10.0
offset_bottom = -90.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CombatLog"]
layout_mode = 2

[node name="CombatLogTitle" type="Label" parent="CombatLog/VBoxContainer"]
layout_mode = 2
text = "Log"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CombatLog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CombatLogText" type="RichTextLabel" parent="CombatLog/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(230, 160)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=gray]Battle started...[/color]"
scroll_following = true

[node name="EnemyPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_top = 280.0
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EnemyPanelTitle" type="Label" parent="EnemyPanel/VBoxContainer"]
layout_mode = 2
text = "Enemies"
horizontal_alignment = 1

[node name="EnemyStatusContainer" type="VBoxContainer" parent="EnemyPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="SkillMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SkillMenu"]
layout_mode = 2

[node name="SkillMenuTitle" type="Label" parent="SkillMenu/VBoxContainer"]
layout_mode = 2
text = "Skills"
horizontal_alignment = 1

[node name="SkillList" type="VBoxContainer" parent="SkillMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="SkillMenu/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="ItemMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ItemMenu"]
layout_mode = 2

[node name="ItemMenuTitle" type="Label" parent="ItemMenu/VBoxContainer"]
layout_mode = 2
text = "Items"
horizontal_alignment = 1

[node name="ItemList" type="VBoxContainer" parent="ItemMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="ItemMenu/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="TargetSelector" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TargetIndicator" type="Sprite2D" parent="TargetSelector"]

[node name="TargetNameLabel" type="Label" parent="TargetSelector"]
layout_mode = 0
offset_left = -50.0
offset_top = -30.0
offset_right = 50.0
text = "Target"
horizontal_alignment = 1

[node name="MessageBox" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageLabel" type="Label" parent="MessageBox"]
layout_mode = 2
text = "Battle message here..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VictoryScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VictoryPanel" type="PanelContainer" parent="VictoryScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryScreen/VictoryPanel"]
layout_mode = 2

[node name="VictoryTitle" type="Label" parent="VictoryScreen/VictoryPanel/VBoxContainer"]
layout_mode = 2
text = "VICTORY!"
horizontal_alignment = 1

[node name="RewardsContainer" type="VBoxContainer" parent="VictoryScreen/VictoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EXPLabel" type="Label" parent="VictoryScreen/VictoryPanel/VBoxContainer/RewardsContainer"]
layout_mode = 2
text = "EXP Gained: 100"

[node name="GoldLabel" type="Label" parent="VictoryScreen/VictoryPanel/VBoxContainer/RewardsContainer"]
layout_mode = 2
text = "Gold: 50"

[node name="ItemsLabel" type="Label" parent="VictoryScreen/VictoryPanel/VBoxContainer/RewardsContainer"]
layout_mode = 2
text = "Items: Potion x1"

[node name="ContinueButton" type="Button" parent="VictoryScreen/VictoryPanel/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="DefeatScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="DefeatPanel" type="PanelContainer" parent="DefeatScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DefeatScreen/DefeatPanel"]
layout_mode = 2

[node name="DefeatTitle" type="Label" parent="DefeatScreen/DefeatPanel/VBoxContainer"]
layout_mode = 2
text = "DEFEAT"
horizontal_alignment = 1

[node name="DefeatMessage" type="Label" parent="DefeatScreen/DefeatPanel/VBoxContainer"]
layout_mode = 2
text = "Your party has fallen..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="DefeatScreen/DefeatPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RetryButton" type="Button" parent="DefeatScreen/DefeatPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Retry"

[node name="TitleButton" type="Button" parent="DefeatScreen/DefeatPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Title Screen"
